fix z-index on loader

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,7 @@ fieldset {
 
 #preloader-area {
     position: fixed;
-    z-index: rgb(46, 46, 46);
+    z-index: 1000;
     top: 0;
     left: 0;
     background: rgb(46, 46, 46);
